--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="Default">
 <head>
+	<meta name="google-site-verification" content="mxLeF9KvyY81FUA_3_uuoeQ9Xu1-kdQ4ZxadSoV9bAc" />
     <meta charset="utf-8">
     <meta name="keywords" content="agence web Lyon, stratégie digitale, création de sites, design web sur mesure">
     <meta name="description" content="Agence La Panthère : experts en web design et stratégie digitale pour les entreprises de Lyon.">
